--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,6 +12,10 @@
       <h2>Check the console...</h2>
     </header>
     <!-- create an ordered list with any questions you have on this week's material -->
+    <ol>
+      <h2>Questions for this week: </h2>
+      <li>What are some other functions or methods such as the .length that get used frequently?</li>
+    </ol>
 
   </body>
 </html>
